[package]
name = "day_16"
version = "0.1.0"
authors = ["Guillaume Galy <guilgaly@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

common = { path = "../common"}
ascii = "1.1.0"
peg = "0.8.1"
ndarray = "0.15.6"
sscanf = "0.4.0"
